--- a/src/templatefiles/templates/base.html
+++ b/src/templatefiles/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <title>Results for: {{ term }}</title>
     <link href="{% static "css/bootstrap-responsive.css" %}" rel="stylesheet" />
+    <link href="{% static "css/style.css" %}" rel="stylesheet" />
 </head>
 
 <body>
