Putting translation on top.

--- a/src/templatefiles/templates/base.html
+++ b/src/templatefiles/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Results for: {{ term }}</title>
-    <link href="{% static "css/bootstrap-responsive.css" %}" rel="stylesheet" />
+    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet" />
     <link href="{% static "css/style.css" %}" rel="stylesheet" />
 </head>
 
