--- a/src/fakoberkers/static/css/style.css
+++ b/src/fakoberkers/static/css/style.css
@@ -1,6 +1,20 @@
+#search-container p {
+    text-align: center;
+    margin: 10px 0 0;
+}
+#search-container input[type=text] {
+    margin: 0;
+    height: 30px;
+}
+
+#results-container h2 {
+    margin: 30px 0;
+}
+
 .result-cell {
     margin: 0 auto;
     text-align: center;
+    padding: 5px;
 }
 .result-column {
     border-left: 1px solid black;
