--- a/src/templatefiles/templates/projects.html
+++ b/src/templatefiles/templates/projects.html
@@ -1,1 +1,15 @@
-{%  %}
+{% extends "base.html" %}
+
+{% block body %}
+    <h3>Projects available on this site:</h3>
+    <ul>
+        <li><a href="http://www.onopo.ly/">WWW.onopo.ly</a></li>
+        <li><a href="http://onopo.ly/digita-senscia/">Digita Senscia</a></li>
+    </ul>
+    <h3>And more to come ...</h3>
+    <ul>
+        <li>Wicked Wiki</li>
+        <li>Bieberearcher</li>
+        <li>Er Zit Een Ik In Ons</li>
+    </ul>
+{% endblock %}
