--- a/src/templatefiles/templates/search.html
+++ b/src/templatefiles/templates/search.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Digita Senscia{% endblock %}
+
 {% block body %}
     <div id="search-container">
         <form method="GET" action="{{ request.path }}">
