--- a/src/templatefiles/templates/double.html
+++ b/src/templatefiles/templates/double.html
@@ -1,9 +1,10 @@
 {% extends "search.html" %}
+{% load i18n %}
 
-{% block title %}Results for: {{ term }}{% endblock %}
+{% block title %}{% trans "Results for" %}: {{ term }}{% endblock %}
 
 {% block results %}
-    <h2>Below are the results for: {{ term }}</h2>
+    <h2>{% trans "Below are the results for" %}: {{ term }}</h2>
     <div class="container-fluid">
         <div class="row-fluid">
             {% for translation,images in results.iteritems %}
@@ -14,7 +15,7 @@
                     {% endfor %}
                 </div>
             {% empty %}
-                <div class="span12">No results found.</div>
+                <div class="span12">{% trans "No results found" %}.</div>
             {% endfor %}
         </div>
     </div>
