--- a/src/templatefiles/templates/search.html
+++ b/src/templatefiles/templates/search.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block title %}Digita Senscia{% endblock %}
 
@@ -6,7 +7,7 @@
     <div id="search-container">
         <form method="GET" action="{{ request.path }}">
             <p><input type="text" name="q"/></p>
-            <p><input type="button" name="submit" value="search" onclick="document.forms[0].submit()"/></p>
+            <p><input type="button" name="button" value="{% trans "search" %}" onclick="document.forms[0].submit()"/></p>
         </form>
     </div>
 
