--- a/src/templatefiles/templates/triple.html
+++ b/src/templatefiles/templates/triple.html
@@ -1,9 +1,10 @@
 {% extends "search.html" %}
+{% load i18n %}
 
-{% block title %}Results for: {{ term }}{% endblock %}
+{% block title %}{% trans "Results for" %}: {{ term }}{% endblock %}
 
 {% block results %}
-    <h2>Below are the results for: {{ term }}</h2>
+    <h2>{% trans "Below are the results for" %}: {{ term }}</h2>
     <div class="container-fluid">
         {% for language,span,rsl in results %}
             <hr/>
@@ -24,7 +25,7 @@
         {% empty %}
 
             <div class="row-fluid">
-                <div class="span12">No results found.</div>
+                <div class="span12">{% trans "No results found" %}.</div>
             </div>
 
         {% endfor %}
