--- a/src/templatefiles/templates/triple.html
+++ b/src/templatefiles/templates/triple.html
@@ -25,7 +25,7 @@
         {% empty %}
 
             <div class="row-fluid">
-                <div class="span12">{% trans "No results found" %}.</div>
+                <div class="span12">{% include "no-results.html" %}</div>
             </div>
 
         {% endfor %}
