--- a/src/templatefiles/templates/no-results.html
+++ b/src/templatefiles/templates/no-results.html
@@ -1,11 +1,14 @@
 {% load i18n %}
+{% get_available_languages as languages %}
+{% get_language_info for LANGUAGE_CODE as language_info %}
 
-<p>{% trans "No results found" %}. {% trans "Did you mean to search in another language" %}?</p>
+<p>{% trans "No results found in" %} {{ language_info.name_local }}. {% trans "Did you mean to search in another language" %}?</p>
 <ul>
-    {% get_available_languages as languages %}
     {% for lang_code, lang_name in languages %}
-        {% language lang_code %}
-            <li><a href="{% url 'digitasenscia' %}?q={{ term }}">{{ lang_name }}</a></li>
-        {% endlanguage %}
+        {% if language_info.code != lang_code %}
+            {% language lang_code %}
+                <li><a href="{% url 'digitasenscia' %}?q={{ term }}">{{ lang_name }}</a></li>
+            {% endlanguage %}
+        {% endif %}
     {% endfor %}
 </ul>
