--- a/src/templatefiles/templates/projects.html
+++ b/src/templatefiles/templates/projects.html
@@ -2,15 +2,12 @@
 {% load i18n %}
 
 {% block body %}
-    <h3>{% trans "Projects available on this site" %}:</h3>
+    <h3>{% trans "This page is a simple index to the projects I created" %}:</h3>
     <ul>
         <li><a href="http://www.onopo.ly/">WWW.onopo.ly</a></li>
         <li><a href="http://onopo.ly/digita-senscia/">Digita Senscia</a></li>
         <li><a href="http://onopo.ly/how-bieber-is-your-hero/">How Bieber Is Your Hero</a></li>
     </ul>
-    <h3>{% trans "And more to come" %} ...</h3>
-    <ul>
-        <li>Wicked Wiki</li>
-        <li>Er Zit Een Ik In Ons</li>
-    </ul>
+    <p>{% trans "I also have a slightly outdated website" %}</p>
+    <p><a href="http://fakoberkers.nl">http://fakoberkers.nl</a></p>
 {% endblock %}
