--- a/src/templatefiles/templates/dnd/abstract/base.html
+++ b/src/templatefiles/templates/dnd/abstract/base.html
@@ -15,6 +15,7 @@
         <div class="row-fluid">
             <div class="span12">
                 <h2>{% block title %}{% endblock %}</h2>
+                <h4 style="color:red">{% block todo%}{% endblock %}</h4>
                 <p class="summary">{% block summary %}{% endblock %}</p>
             </div>
         </div>
