--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/cave-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/cave-market.html
@@ -10,7 +10,7 @@
     <ol>
         <li>Clothing</li>
         <li>Blacksmith, Talos devotee, (sells up to masterwork cheap)</li>
-        <li>Brewery</li>
+        <li>Brewery, partly scorned by Mirika attack</li>
         <li>Sea weeds, Druid, (CLW, CMW, CSW cheap!)</li>
         <li>Gear and tools</li>
         <li>Entertainment</li>
@@ -36,8 +36,13 @@
         <dd> >= 17 wears insignia of Lokahmee</dd>
         <dd> >= 12 insignia look familiar</dd>
     </dl>
+    <dl class="dc">
+       <dt>KnowledgeLocalDC:</dt>
+       <dd> >= 10 Clothing seem noble elven from Dalelands</dd>
+    </dl>
 
     <h4>Blacksmith</h4>
+    <p></p>
 
     <h4>Sea weed lady</h4>
 
@@ -53,7 +58,7 @@
 
 {% block knowledges %}
     <dl class="dc">
-        <dt>GatherInformation:</dt>
+        <dt>GatherInformationDC:</dt>
         <dd> >= 10</dd>
         <dd> >= 20</dd>
     </dl>
