Finish the general city planning and add some characters.

--- a/src/templatefiles/templates/dnd/abstract/game_character.html
+++ b/src/templatefiles/templates/dnd/abstract/game_character.html
@@ -7,6 +7,16 @@
 
     <div class="row-fluid">
         <div class="span12">
+            {% block motivation %}
+                <p style="color: red;">no motivation!</p>
+            {% endblock %}
+        </div>
+    </div>
+
+    <hr/>
+
+    <div class="row-fluid">
+        <div class="span12">
             {% block story %}No story{% endblock %}
         </div>
     </div>
