Making a start with fisher scheme.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -1,21 +1,36 @@
 {% extends "dnd/abstract/place.html" %}
 
+{% block todo %}Translations{% endblock %}
+
 {% block locations %}
     <p>Places of interest in this area</p>
     <ul>
-        <li>Sharks sell (Locathah captain)</li>
+        <li>Shark stand (Locathah captain)</li>
+        <li>Fish stands</li>
+        <li>Octopus stands</li>
     </ul>
     <p>Neighbooring area's</p>
     <ul>
-        <li></li>
+        <li>Behind the fish nets there are entrances to <a href="slums-market.html">slums market</a></li>
+        <li>Walk away from city center to <a href="breakers-slums.html">breakers-slums</a></li>
+        <li>Go up the goods scale to <a href="../trade-district/food-market.html">food market</a></li>
+        <li>Walk towards city center to <a href="harbor-slums.html">harbor slums</a></li>
+    </ul>
+    <p>View</p>
+    <ul>
+        <li>The docks</li>
+        <li>Massive building with a huge round window showing a face enprofile in glass and lead (ReligionDC10: Waukeen emblem)</li>
+        <li>Walls with a tower on sea side and some kind of fortress in the middle of the <b>INHAM</b></li>
+        <li>Behind the ships the whole bank consists of noble houses. The ones closer to the water are smaller.</li>
     </ul>
 {% endblock %}
 
 {% block creatures %}
-    <h4>Sjahnsesh - Locathah captain</h4>
+    <h4><a href="/dnd/characters/Sjahnsesh.html">Sjahnsesh</a> - Locathah captain</h4>
     <ul>
-        <li>Can be found at the sharks sell.</li>
+        <li>Can be found at the sharks stand.</li>
         <li>A Talos devotee</li>
         <li>Can help to get to <a href="sea-water-slums.html">sea water slums</a> and <a href="drinking-mermaid.html">the drinking mermaid</a></li>
     </ul>
 {% endblock %}
+
