--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
@@ -41,11 +41,14 @@
        <dd> >= 14 Clothing seem noble elven from Dalelands</dd>
     </dl>
 
-    <h4><a href="/dnd/characters/Gorakesh.html">Gorakesh</a> - blacksmith (Talos devotee)</h4>
+    <h4><a href="/dnd/characters/Sorakesh.html">Sorakesh</a> - blacksmith (Talos devotee)</h4>
     <p>A strong guy who makes more than fishing spears as a hobby</p>
 
     <h4><a href="/dnd/characters/Nimry.html">Nimry</a> - sea weed lady</h4>
     <p>An old woman schooled in the powers of sea weeds</p>
+
+    <h4><a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a> - the brewery owner</h4>
+    <p>He ownes the brewery, but also a fish stand on the food market as his alter ego Moltabar. He secretly smuggles goods past Waukeen church.</p>
 
 {% endblock %}
 
@@ -60,8 +63,8 @@
 {% block knowledges %}
     <dl class="dc">
         <dt>GatherInformationDC:</dt>
-        <dd> >= 10</dd>
-        <dd> >= 20</dd>
+        <dd> >= 10 The men drinking are complaining about the little they earn with fish</dd>
+        <dd> >= 15 The men drinking earn some money on the side at night</dd>
     </dl>
 {% endblock %}
 
