Change endpoint to remote.

--- a/src/digitasenscia/templates/digita-senscia.html
+++ b/src/digitasenscia/templates/digita-senscia.html
@@ -32,7 +32,7 @@
                     expected_duration: 5000,
                     max_progress: 100
                 },
-                translationEndpoint: "http://localhost:8000/en/hif/video-translations/"
+                translationEndpoint: "http://onopo.ly/en/hif/video-translations/"
             }
         </script>
     <script src="{% static "js/e73d1c9b.scripts.js" %}"></script>
