--- a/src/globescope/templates/views/resize.html
+++ b/src/globescope/templates/views/resize.html
@@ -1,3 +1,27 @@
-{% verbatim %}
-<div id="kiosk" ng-style="kioskStyle" ng-class="kioskClass"><div class="central-box-outer"><div class="central-box-inner"><div class="central-box-content resize-content"><h2>Resizing to {{ width }} x {{ height }}</h2><p>This white box will always have a ratio of {{ kioskSettings.ratioWidth }}:{{ kioskSettings.ratioHeight }}. This text turns <span class="resize-green">green</span> when it reaches a format where there are no black bars on the side. This text turns <span class="resize-red">red</span> when it reaches a size that is too small to view Translate To Visuals.</p></div></div></div></div>
-{% endverbatim %}
+<div id="kiosk" ng-style="kioskStyle" ng-class="sizeClass">
+    <div class="central-box-outer">
+        <div class="central-box-inner">
+            <div class="central-box-content">
+                <div class="mis-fit-text">
+                    <h2>Adjusting screen size</h2>
+                    <p>
+                        Adjust the screen to the size you want.
+                        Stop adjusting and your results will show in a second.
+                    </p>
+                </div>
+                <div class="no-fit-text">
+                    <h2>Screen to small</h2>
+                    <p>
+                        To show you the results we need a screen that is at least {{ minimalWidth }} x {{ minimalHeight }}.
+                        Please enlarge your screen.
+                        This message will disappear when your screen is big enough.
+                    </p>
+                </div>
+                <div class="fit-text">
+                    <h2>Perfect!</h2>
+                    <p>Your screen has an optimal ratio between width and height for this website.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
