Fix minified CSS and image path image + include statics always.

--- a/src/globescope/templates/globe-scope.html
+++ b/src/globescope/templates/globe-scope.html
@@ -13,11 +13,11 @@
     <meta name="description" content=""> <!-- TODO: fill out-->
     <meta name="viewport" content="width=device-width">
     <meta name="google" value="notranslate">
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" />
 
     <link rel="stylesheet" href="{% static 'css/vendor.css' %}"/>
 
-    <link rel="stylesheet" href="{% static 'css/772b7f4f.main.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/e86d763b.main.css' %}"/>
 
 </head>
 
