--- a/src/globescope/templates/globescope/views/resize.html
+++ b/src/globescope/templates/globescope/views/resize.html
@@ -12,7 +12,7 @@
                 <div class="no-fit-text">
                     <h2>Screen to small</h2>
                     <p>
-                        To show you the results we need a screen that is at least {{ minimalWidth }} x {{ minimalHeight }}.
+                        To show you the results we need a screen that is at least {% verbatim %}{{ minimalWidth }}{% endverbatim %} x {% verbatim %}{{ minimalHeight }}{% endverbatim %}.
                         Please enlarge your screen.
                         This message will disappear when your screen is big enough.
                     </p>
