--- a/src/globescope/templates/globescope/views/waiting.html
+++ b/src/globescope/templates/globescope/views/waiting.html
@@ -1,7 +1,7 @@
 <div class="central-box-outer">
     <div class="central-box-inner">
         <div class="central-box-content">
-            <progress max="{{ max_progress }}" value="{{ progress }}"></progress>
+            <progress max="{% verbatim %}{{ max_progress }}{% endverbatim %}" value="{% verbatim %}{{ progress }}{% endverbatim %}"></progress>
             <p>
                 We're fetching the translations of the word you enter from the Chinese, Russian and Portuguese <u>Wikipedia</u> websites.
                 When that is done we feed all the words that come out of that translation into <u>Google Image</u> search.
