--- a/src/globescope/templates/globescope/views/word.html
+++ b/src/globescope/templates/globescope/views/word.html
@@ -1,1 +1,1 @@
-<img ng-src="{{ translation.visuals[0].link }}" ng-class="translation.visuals[0].cssClass()" ng-style="translation.visuals[0].style()"/>
+<img ng-src="{% verbatim %}{{ translation.visuals[0].link }}{% endverbatim %}" ng-class="translation.visuals[0].cssClass()" ng-style="translation.visuals[0].style()"/>
