--- a/src/globescope/templates/globescope/views/question-form.html
+++ b/src/globescope/templates/globescope/views/question-form.html
@@ -1,8 +1,8 @@
 <form name="questionForm" class="question-box" ng-submit="send()" ng-controller="QuestionCtrl">
     <fieldset class="question-fields">
-        <p>{{ question }}</p>
+        <p>{% verbatim %}{{ question }}{% endverbatim %}</p>
         <textarea ng-model="questionForm.answer" type="text" placeholder="Feedback" ng-required></textarea>
         <input ng-model="questionForm.email" type="email" placeholder="Email address (optional)"/>
-        <input type="submit" name="search" value="{{ submit }}">
+        <input type="submit" name="search" value="{% verbatim %}{{ submit }}{% endverbatim %}">
     </fieldset>
 </form>
