Adding some manual verbatim on result screen.

--- a/src/globescope/templates/globescope/views/result.html
+++ b/src/globescope/templates/globescope/views/result.html
@@ -42,7 +42,7 @@
     <div class="central-box-outer">
         <div class="central-box-inner">
             <div class="central-box-content">
-                <h2>Loading images ... {{ images.loaded}} / {% verbatim %}{{ images.needed }}{% endverbatim %}</h2>
+                <h2>Loading images ... {% verbatim %}{{ images.loaded }}{% endverbatim %} / {% verbatim %}{{ images.needed }}{% endverbatim %}</h2>
             </div>
         </div>
     </div>
