Resolve multiple problems with new temporarily setup.

--- a/src/digitasenscia/templates/digitasenscia/digita-senscia.html
+++ b/src/digitasenscia/templates/digitasenscia/digita-senscia.html
@@ -1,13 +1,5 @@
 {% load static %}
-<!doctype html><!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]--><!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]--><!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]--><!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><!--
-
-	  Navigation bar (new style)
-	  Images instead of videos
-	  Email form for features/bugs
-	  Handle network errors
-	  Handle processing errors
-
-	  --><meta charset="utf-8"><title>Translate To Visuals</title><meta name="description" content=""><meta name="viewport" content="width=device-width"><meta name="google" value="notranslate"><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel="stylesheet" href="{% static "css/3dd0922a.main.css" %}"></head><body ng-app="digitaSensciaApp"><!--[if lt IE 7]>
+<!doctype html><!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]--><!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]--><!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]--><!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><meta charset="utf-8"><title>Translate To Visuals</title><meta name="description" content=""><meta name="viewport" content="width=device-width"><meta name="google" value="notranslate"><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel="stylesheet" href="{% static "css/3dd0922a.main.css" %}"></head><body ng-app="digitaSensciaApp"><!--[if lt IE 7]>
 	  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]--><!-- Add your site or application content here --><div id="view" ng-view=""><p>To use this website you need to have Javascript enabled.</p></div>
 
@@ -32,7 +24,7 @@
                     expected_duration: 5000,
                     max_progress: 100
                 },
-                translationEndpoint: "http://globe-scope.org/en/hif/video-translations/"
+                translationEndpoint: "http://globe-scope.com/en/hif/video-translations/"
             }
         </script>
     <script src="{% static "js/e73d1c9b.scripts.js" %}"></script>
