--- a/src/globescope/templates/globescope/globe-scope.html
+++ b/src/globescope/templates/globescope/globe-scope.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!doctype html>
-<!--[if lte IE 8]><html class="no-js ie lt-ie9"><![endif]-->
-<!--[if IE 9]><html class="no-js ie ie9"><![endif]-->
+<!--[if lte IE 8]><html class="no-js ie lte-ie9"><![endif]-->
+<!--[if IE 9]><html class="no-js ie lte-ie9"><![endif]-->
 <!--[if gt IE 9]><html class="no-js ie"><![endif]-->
 <html class="no-js">
 
